# project_skeleton

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/skeleton/: cli.py
src/skeleton/core/: ast_nodes.py  exporter.py  parser.py
src/skeleton/exporters/: json_exporter.py  markdown_exporter.py
src/skeleton/parsers/: python_parser.py
tests/: test_exporter.py  test_python_parser.py
