[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skeleton"
version = "0.1.0"
description = "Generate codebase skeletons from source projects (Python, C, Java...)"
authors = [
  { name="Lorenzo Zorri" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "typer>=0.9.0"
]

[project.scripts]
skeleton = "skeleton.cli:app"

[tool.setuptools.packages.find]
where = ["src"]